--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -79,6 +79,7 @@
             display: flex;
             height: auto;
             margin: 0;
+            overflow: visible;
         }
 
         @include wider-than($tablet-max) {
