Tell use text fix

--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -45,7 +45,7 @@
             <div
                 class="grouping {model.currentSection === 3 ? '' : 'hidden'}"
             >
-                <h2>Tell use about the technology you use.</h2>
+                <h2>Tell us about the technology you use.</h2>
                 <div class="hint">Check all that apply</div>
                 <div class="two-columns">
                     <div each="partner in model.partnerResourceOptions" class="checkbox-control-group">
