Add submenu header
Also clean up some more

--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -11,5 +11,6 @@
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
             Back
         </a>
+        <div class="menu-title">{model.submenuName}</div>
     </div>
 </template>
