--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -160,6 +160,10 @@ $button-size: 2.8rem;
             width: 0.8rem;
         }
 
+        .menu-title {
+            font-weight: bold;
+        }
+
         @at-root .active.open#{&} {
             display: block;
         }
