Add email to adoption followup form

--- a/src/app/pages/adoption-confirmation/supplemental-form.html
+++ b/src/app/pages/adoption-confirmation/supplemental-form.html
@@ -6,6 +6,7 @@
             <input name="utf8" type="hidden" value="✓">
             <input type="hidden" name="oid" value="{model.salesforce.oid}">
             <input type="hidden" name="lead_source" value="Adoption Form">
+            <input type="hidden" name="email" value="{model.email}">
         </div>
         <div class="text">
             <plug-in data-id="partnerContact" skip="true"></plug-in>
