Keep "Get This Book" in bounds on Details page

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -52,7 +52,9 @@
                     </div>
                 </div>
             </section>
-            <section class="floating-menu {model.bottom}">
+            <section
+            style="{top: model.fmTop}"
+            class="floating-menu {model.fmPosition}">
                 <div class="box">
                 <h2>Get this book</h2>
                 <div class="get-this-book" skip="true"></div>
