Adoption and interest bugs and changes

--- a/src/app/pages/adoption-confirmation/adoption-confirmation.html
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.html
@@ -2,4 +2,7 @@
 <div class="strip-container">
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
 </div>
-<div class="content"></div>
+<div class="content">
+    <div class="followup-form">
+    </div>
+</div>
