--- a/src/app/pages/adoption-confirmation/header-1.html
+++ b/src/app/pages/adoption-confirmation/header-1.html
@@ -2,16 +2,14 @@
     <div class="flexrow">
         <div class="text">
             <h1>
-                Got 10 more seconds?
+                Thank you!<br>
+                You're a textbook hero.
             </h1>
             <div>
-                Get connected with
-                additional resources by providing some extra information below.
-                Thanks for being a textbook hero!
+                Want to tell us about another OpenStax book you're using?
             </div>
             <div>
-                Want to tell us about another OpenStax book you're using?<br>
-                <a href="/adoption">Report another adopted textbook</a>
+                <a class="outlined" href="/adoption">Report another adopted textbook</a>
             </div>
         </div>
         <img class="hero-image" src="/images/components/student-chemistry.png" alt=""/>
