--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -23,9 +23,12 @@
                 <br>
                 <div each="subject in model.subjects">
                     <label class="field-label">{subject}</label>
-                    <div class="{model.booksBySubject(subject).length > 1 ? 'two-columns' : ''}">
+                    <div class="two-columns">
                         <div each="book in model.booksBySubject(subject)" class="radio-control-group">
-                            <label><input type="radio" name="00NU00000053nzR" value="{book.value}" required>{book.text}</label>
+                            <label>
+                                <input type="radio" name="00NU00000053nzR" value="{book.value}" checked="{book.value === model.defaultTitle ? '' : null}" required>
+                                {book.text}
+                            </label>
                         </div>
                     </div>
                     <br>
