--- a/src/app/pages/adoption-confirmation/supplemental-form.html
+++ b/src/app/pages/adoption-confirmation/supplemental-form.html
@@ -1,4 +1,10 @@
 <template args="model">
+    <div class="form-header">
+        <h2>Got 10 more seconds?<br>
+            Get connected with additional resources by providing some
+            extra information below.
+        </h2>
+    </div>
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
     <form accept-charset="UTF-8" class="form" target="form-response"
      action="https://{model.salesforce.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
@@ -13,7 +19,7 @@
             <plug-in data-id="featureMe" skip="true"></plug-in>
             <plug-in data-id="contactMe" skip="true"></plug-in>
             <div class="flexrow">
-                <button type="submit" class="btn primary">Submit</button>
+                <button type="submit" class="btn primary">Get connected</button>
             </div>
         </div>
     </form>
