Add Privacy Policy page

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -14,6 +14,9 @@
                     <a href="/tos">Terms of Use</a>
                 </li>
                 <li>
+                    <a href="/privacy-policy">Privacy Policy</a>
+                </li>
+                <li>
                     <a href="/accessibility-statement">Accessibility Statement</a>
                 </li>
                 <li>
