--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -56,7 +56,7 @@
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-cloud-download"></span>
+                    <span class="fa fa-cloud-download-alt"></span>
                     <if condition="model.slug.substr(-6) === 'polska'">
                         {' Pobierz książkę'}
                     <else>
@@ -82,7 +82,7 @@
             <if condition="model.ibookLink">
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
-                        <span class="fa fa-apple"></span>
+                        <span class="fab fa-apple"></span>
                         Download on iBooks
                     </span>
                     <a href="{model.ibookLink}"
@@ -97,7 +97,7 @@
                 <div if="!model.ibookLink2" class="option">
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        <span class="fa fa-apple"></span>
+                        <span class="fab fa-apple"></span>
                         Download on iBooks
                     </a>
                 </div>
@@ -105,7 +105,7 @@
             <div if="model.kindleLink" class="option">
                 <a href="{model.kindleLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-amazon"></span>
+                    <span class="fab fa-amazon"></span>
                     Download for Kindle
                 </a>
             </div>
