--- a/src/app/pages/adoption-confirmation/adoption-confirmation.scss
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.scss
@@ -4,7 +4,6 @@
 .adoption-confirmation {
 
     .hero {
-
         padding: 0;
     }
 
@@ -18,6 +17,11 @@
 
     .strip-container {
         height: 1rem;
+    }
+
+    .followup-form,
+    .form-header {
+        max-width: 100%;
     }
 
     .form-checkboxgroup,
@@ -71,9 +75,13 @@
     }
 
     .form-header {
-        padding-right: 4rem;
         transform: translateY(4rem);
-        width: 72rem;
+
+        @include wider-than($phone-max) {
+            padding-left: 4rem;
+            padding-right: 4rem;
+            width: 72rem;
+        }
 
         h2 {
             @include set-font(h3);
@@ -104,6 +112,14 @@
         @extend %form;
 
         background-color: ui-color(default);
+        margin-left: 0;
+        margin-right: 0;
+
+        // TODO: Put in pattern library
+        @include width-up-to($phone-max) {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     button {
