Update font awesome icons

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -56,7 +56,7 @@
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-cloud-download-alt"></span>
+                    <span class="fas fa-cloud-download-alt"></span>
                     <if condition="model.slug.substr(-6) === 'polska'">
                         {' Pobierz książkę'}
                     <else>
