--- a/src/app/components/popup/popup.scss
+++ b/src/app/components/popup/popup.scss
@@ -29,7 +29,8 @@ pop-up {
         }
 
         button {
-            @include button(primary);
+            @extend %primary;
+            @include button();
         }
     }
 
