--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -154,7 +154,8 @@ $hero-break-width: 880px;
     }
 
     .cta .btn {
-        @include button(primary);
+        @extend %primary;
+        @include button();
     }
 
     .affiliates {
